[package]
name = "rsslab"
version = "0.0.0"
edition = "2021"

[lib]
path = "rsshub/lib.rs"
crate-type = ["staticlib"]

[dependencies]
biome_rowan = "0.5"
biome_js_parser = "0.5"
biome_js_syntax = "0.5"
rustc-hash = "2.0"
itertools = "0.13"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
